fixed alignment differences between profile view and solo staging view

--- a/server/public/styles/profile.css
+++ b/server/public/styles/profile.css
@@ -12,8 +12,8 @@
 
 .exit {
   position: absolute;
-  right: -10px;
-  top: -10px;
+  right: -20px;
+  top: -20px;
   z-index:4;
   height: 40px;
   width: 40px;
